yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickmortyapp-service
  labels:
    app: rickmortyapp
spec:
  type: ClusterIP
  selector:
    app: rickmortyapp
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
